--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -59,7 +59,17 @@
                 <!-- Left navigation links -->
                 <ul
                 class="list-style-none mr-auto flex flex-col pl-0 lg:flex-row"
-                data-te-navbar-nav-ref>        
+                data-te-navbar-nav-ref>
+
+                <!-- Search link -->
+                <li class="my-4 lg:my-0 lg:pr-2" data-te-nav-item-ref>
+                    <a class="flex items-center text-white disabled:text-black/30 lg:px-2 [&.active]:text-black/90 dark:[&.active]:text-neutral-400" href="{% url 'item:procurar' %}" data-te-nav-link-ref>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 mr-1">
+                            <path d="M14.5 12a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm5.92 10.93l-4.71-4.71A8.003 8.003 0 0112 20a8 8 0 118-8c0 1.55-.45 2.99-1.22 4.22l4.71 4.71a.996.996 0 11-1.41 1.41zM12 18a6 6 0 100-12 6 6 0 000 12z"/>
+                        </svg>
+                        <span>Procurar</span>
+                    </a>
+                </li>     
                 
                 {% if request.user.is_authenticated %}
 
@@ -91,7 +101,7 @@
                         data-te-nav-link-ref
                         >Novo Produto</a
                         >
-                    </li>
+                    </li>                   
 
                 {% else %}
                     
@@ -119,21 +129,33 @@
 
             <!-- Right elements -->
             <div class="relative flex items-center">
-                <!-- Cart Icon -->
-                <a
-                class="mr-4 text-white opacity-60 hover:opacity-80 focus:opacity-80"
-                href="#">
-                <span class="[&>svg]:w-5">
-                    <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    fill="currentColor"
-                    class="h-5 w-5">
-                    <path
-                        d="M2.25 2.25a.75.75 0 000 1.5h1.386c.17 0 .318.114.362.278l2.558 9.592a3.752 3.752 0 00-2.806 3.63c0 .414.336.75.75.75h15.75a.75.75 0 000-1.5H5.378A2.25 2.25 0 017.5 15h11.218a.75.75 0 00.674-.421 60.358 60.358 0 002.96-7.228.75.75 0 00-.525-.965A60.864 60.864 0 005.68 4.509l-.232-.867A1.875 1.875 0 003.636 2.25H2.25zM3.75 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM16.5 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0z" />
-                    </svg>
-                </span>
-                </a>            
+                <ul class="flex items-center space-x-4">
+                    <!-- Sair link -->
+                    {% if request.user.is_authenticated %}
+                    <li class="mb-4 lg:mb-0 lg:pr-2" data-te-nav-item-ref>
+                        <form action="{% url 'core:sair' %}" method="post">
+                            {% csrf_token %}
+                            <button 
+                            type="submit" 
+                            class="p-0 text-white opacity-60 hover:opacity-80 focus:opacity-80 disabled:text-black/30 lg:px-2 [&.active]:text-black/90 dark:[&.active]:text-neutral-400" 
+                            data-te-nav-link-ref>Sair</button>
+                        </form>
+                    </li>
+                    {% endif %}
+
+                    <li>
+                        <!-- Cart Icon -->
+                        <a class="flex items-center mr-4 text-white opacity-60 hover:opacity-80 focus:opacity-80" href="#">
+                            <span class="[&>svg]:w-5">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-5 w-5">
+                                    <path
+                                    d="M2.25 2.25a.75.75 0 000 1.5h1.386c.17 0 .318.114.362.278l2.558 9.592a3.752 3.752 0 00-2.806 3.63c0 .414.336.75.75.75h15.75a.75.75 0 000-1.5H5.378A2.25 2.25 0 017.5 15h11.218a.75.75 0 00.674-.421 60.358 60.358 0 002.96-7.228.75.75 0 00-.525-.965A60.864 60.864 0 005.68 4.509l-.232-.867A1.875 1.875 0 003.636 2.25H2.25zM3.75 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM16.5 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0z" />
+                                </svg>
+                            </span>
+                            <span class="ml-2">Comprar</span>
+                        </a>
+                    </li>
+                </ul>
             </div> <!-- END OF Right elements -->
         
         </div>
